match errorprone install suggestions